line spacing issue fixed

--- a/mh.css
+++ b/mh.css
@@ -21,6 +21,7 @@ main {
 .mh-main-hot-contents-title {
   display: flex;
   justify-content: center;
+  margin-top: 60px;
   margin-bottom: 70px;
   color: #212529;
   font-size: 40px;
@@ -114,6 +115,7 @@ main {
   letter-spacing: -0.6px;
   color: #212529;
   text-align: center;
+  margin-top: 27px;
 }
 
 .mh-top-keywords-list {
